[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psycodict"
version = "0.1.13"
description = "dictionary-based python interface to PostgreSQL databases"
requires-python = ">=3.8"
authors = [{name = "David Roe", email = "roed.math@gmail.com"}, {name = "Edgar Costa", email = "edgarc@mit.edu"}]
license = {text = "GPL v2+"}
keywords = ["postgres", "database", "interface"]

[project.urls]
homepage = "https://github.com/roed314/psycodict"
repository = "https://github.com/roed314/psycodict"

[project.optional-dependencies]
pgsource = ["psycopg2>=2.8"]
pgbinary = ["psycopg2-binary>=2.8"]

