[build-system]
# setuptools >= 77 implements PEP 639, required for the SPDX `license` string
# below; it is available on every interpreter >= 3.9.
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "psycodict"
# Version lives in psycodict/__init__.py (__version__); see [tool.setuptools.dynamic].
dynamic = ["version"]
description = "dictionary-based python interface to PostgreSQL databases"
# Required by the `twine check --strict` gate in CI: without it the package
# has no long_description and the PyPI project page renders empty.
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "David Roe", email = "roed.math@gmail.com"}, {name = "Edgar Costa", email = "edgarc@mit.edu"}]
license = "GPL-2.0-or-later"
keywords = ["postgres", "database", "interface"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/roed314/psycodict"
Repository = "https://github.com/roed314/psycodict"
Changelog = "https://github.com/roed314/psycodict/blob/main/CHANGELOG.md"

[project.optional-dependencies]
pgsource = ["psycopg>=3.1"]
pgbinary = ["psycopg[binary]>=3.1"]
test = ["pytest>=7"]

[tool.setuptools.dynamic]
version = {attr = "psycodict.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "devmirror: read-only tests against the public LMFDB mirror; needs network access and PSYCODICT_TEST_DEVMIRROR=1",
]
# psycodict logs every query it runs; without this a failing test drowns in
# connection chatter before the assertion that matters.
log_cli_level = "WARNING"
filterwarnings = ["error::DeprecationWarning:psycodict.*"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
# The psycopg availability check in __init__.py deliberately runs before the
# imports that depend on it.
"psycodict/__init__.py" = ["E402"]
# Pre-existing findings, silenced so that adopting a linter does not smuggle
# behavioural changes into an infrastructure change.  Each is a one-line fix
# for a follow-up PR:
#   base.py:229      E741  logger alias named `l`
#   base.py:1024     F841  `ordered` assigned from a call kept for its side
#                          effect (_order_columns mutates its argument)
"psycodict/base.py" = ["E741", "F841"]
